# nitrocopy

./: .gitignore  CMakeLists.txt  README.md  mingw-w64-i686-toolchain.cmake
include/: compat.h  console.h  copier.h  copy_process.h  file.h  fletcher32.h  libnitro.h  logging.h  nitro_console.h  nitro_console_compat.h  nitro_debug.h  nitro_file.h  nitro_logging.h  nitro_runtime.h  nitro_version.h.in  runtime.h  word16.h
src/: CMakeLists.txt  compat.c  copier.c  copy_process.c  libnitro.c  libnitro.h  logging.c  main.c  nitro_console_compat.c  nitro_runtime.c  word16.c
src/app/: CMakeLists.txt  main.c
src/core/: CMakeLists.txt  libnitro.c  nitro_logging.c
src/fletcher32/: CMakeLists.txt  fletcher32.c  test_fletcher32.c
src/getopt/: CMakeLists.txt  getopt.c  getopt.h  test_getopt.c  test_swap_with_tail.c
src/platform/: CMakeLists.txt
src/platform/linux/: CMakeLists.txt  console.c  file.c  nitro_console.c  nitro_file.c
src/platform/win9x/: CMakeLists.txt  console.c  file.c  nitro_console.c  nitro_file.c
tests/: CMakeLists.txt  cursor_test.c  fletcher32_tests.c  test_copy_process_init_should_return_with_initialised_members.c  test_runner.c  test_runner.h
